fix select issue on safari

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -255,30 +255,6 @@ nav {
     padding: 10px 20px;
 }
 
-.content_ragister select {
-    background: #f4f9fe;
-    height: 50px;
-    border: 0;
-    border-radius: 12px;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.02em;
-    padding: 10px 20px;
-    /* fix safari issue */
-    -webkit-appearance: none; 
-    -moz-appearance: none;
-    appearance: none;
-    background-image: url("data:image/svg+xml,\
-      <svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='14px'\
-           height='14px' viewBox='0 0 1200 1000' fill='rgb(51,51,51)'>\
-        <path d='M1100 411l-198 -199l-353 353l-353 -353l-197 199l551 551z'/>\
-      </svg>");
-    background-repeat: no-repeat;
-    background-position: calc(100% - 10px) 50%;
-}
-
 .content_ragister textarea {
     background: #F4F9FE;
     padding: 15px;
@@ -794,4 +770,23 @@ i.material-icons {
 }
 .thumbnails + hr {
     margin-top: 15px;
+}
+.content_ragister select {
+    background: #f4f9fe;
+    height: 50px;
+    border: 0;
+    border-radius: 12px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+    padding: 10px 20px;
+    /* fix safari issue */
+    -webkit-appearance: none; 
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='14px' height='14px' viewBox='0 0 1200 1000' fill='rgb(51,51,51)'><path d='M1100 411l-198 -199l-353 353l-353 -353l-197 199l551 551z'/></svg>");
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px) 50%;
 }
